--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </div>
     </section>
 
-    <section id="resumee">
+    <section id="resume">
     
         <div class="section-content">
             <center>
